(probably) fixed dont rendering on firefox and firefox based browsers by using -moz-osx-font-smoothing: grayscaled;

--- a/style.css
+++ b/style.css
@@ -404,6 +404,7 @@ body {
   animation: autoRun 20s linear infinite;
   z-index: 2;
   border-radius: 10px;
+  -moz-osx-font-smoothing: grayscaled;
 }
 .banner .slider:hover {
   animation-play-state: paused;
